# note

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: note-strict-ci.yml
assets/: index.html  note.css  note.js
assets/css/: note.css
assets/js/: note.js
cmake/: vix_noteConfig.cmake.in
examples/: CMakeLists.txt  cpp_basics.vixnote  cpp_classes.vixnote  cpp_conditionals.vixnote  cpp_functions.vixnote  cpp_loops.vixnote  cpp_standard_library.vixnote  cpp_structs.vixnote  cpp_variables.vixnote  cpp_vectors.vixnote  hello.vixnote  html_cells.vixnote  learning_cpp.vixnote  reply_basics.vixnote  reply_calculator.vixnote  reply_json_values.vixnote  reply_quick_cells.vixnote  reply_runtime_helpers.vixnote  reply_variables.vixnote  vix_ui_note.vixnote
include/vix/note/: Version.hpp  note.hpp
include/vix/note/core/: NoteCell.hpp  NoteDocument.hpp  NoteError.hpp  NoteResult.hpp
include/vix/note/export/: HtmlExporter.hpp
include/vix/note/extensions/: NoteExtensionRegistry.hpp
include/vix/note/parser/: NoteParser.hpp
include/vix/note/project/: ProjectContext.hpp  ProjectDetector.hpp
include/vix/note/runtime/: CppCellRunner.hpp  NoteKernel.hpp  NoteSession.hpp  ReplyCellRunner.hpp
include/vix/note/storage/: NoteStore.hpp
include/vix/note/web/: NoteAssets.hpp  NoteRoutes.hpp  NoteServer.hpp
src/core/: NoteCell.cpp  NoteDocument.cpp  NoteError.cpp  NoteResult.cpp
src/export/: HtmlExporter.cpp
src/extensions/: NoteExtensionRegistry.cpp
src/parser/: NoteParser.cpp
src/project/: ProjectContext.cpp  ProjectDetector.cpp
src/runtime/: CppCellRunner.cpp  NoteKernel.cpp  NoteSession.cpp  ReplyCellRunner.cpp
src/storage/: NoteStore.cpp
src/web/: NoteAssets.cpp  NoteRoutes.cpp  NoteServer.cpp
tests/: CMakeLists.txt  cpp_cell_runner_test.cpp  html_exporter_test.cpp  note_assets_test.cpp  note_cell_test.cpp  note_document_test.cpp  note_error_test.cpp  note_kernel_test.cpp  note_parser_test.cpp  note_result_test.cpp  note_routes_test.cpp  note_server_test.cpp  note_session_test.cpp  note_store_test.cpp
